@@ -16,6 +16,7 @@
 * Added support for encryption.
 * Removed short name and changed long name for AWS CLI creds.
 * Adding encrypted attribute by default for all builds.
+* Change base_prefix CLI option to base
 
 ## v0.4.0:
 
